added cookie cutter

--- a/resources/scientific_computing/default_env.yml
+++ b/resources/scientific_computing/default_env.yml
@@ -18,6 +18,7 @@ dependencies:
   - jupyterlab
   - ipython
   - snakemake  # pipeline and workflows
+  - cookiecutter  # install project templates
 
   # software development
   - ruff  # linting and auto code fixing
